--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<form action="/connection">
+	<form action="/requestConnection">
 		<input type="submit" value="Connection" />
 	</form>
-	<form action="/stationboard">
+	<form action="/requestStationboard">
 		<input type="submit" value="Stationboard" />
 	</form>
 </body>
