--- a/src/main/resources/templates/connection.html
+++ b/src/main/resources/templates/connection.html
@@ -1,23 +1,15 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-<title>Fahrplan</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Fahrplan</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<h1>Form</h1>
-	<form action="#" th:action="@{/stationboard}"
-		method="post">
-		<p>
-			From: <input type="text" />
-		</p>
-		<p>
-			To: <input type="text"  />
-		</p>
-		<p>
-			<input type="submit" value="Submit" /> <input type="reset"
-				value="Reset" />
-		</p>
+	<form action="#" th:action="@{/requestConnection}" th:object="${connection}" method="post">
+		<p>From: <input type="text" th:field="*{from}"/></p>
+		<p>To: <input type="text" th:field="*{to}"/></p>
+		<p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
 	</form>
 </body>
 </html>
