--- a/src/main/resources/templates/stationboard.html
+++ b/src/main/resources/templates/stationboard.html
@@ -1,20 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-<title>Fahrplan</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Fahrplan</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
 	<h1>Form</h1>
-	<form th:action="@{/stationboard}"
-		method="post">
-		<p>
-			Location: <input type="text" />
-		</p>
-		<p>
-			<input type="submit" value="Submit" /> <input type="reset"
-				value="Reset" />
-		</p>
+	<form method="post" th:action="@{/requestStationboard}" th:object="${stationboard}">
+		<p> Location: <input type="text" th:field="*{location}"/></p>
+		<p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
 	</form>
 </body>
 </html>
